objects/Partner_Documentation__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>General description of the document</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File</label>
        <referenceTo>Ensemblestorage__EnsembleFile__c</referenceTo>
        <relationshipLabel>Partner Documents</relationshipLabel>
        <relationshipName>Partner_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <label>Folder</label>
        <picklist>
            <picklistValues>
                <fullName>Welcome Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Sheets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Selling Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logos and Icons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Papers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Webinars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Partner Documentation</label>
    <listViews>
        <fullName>Case_Studies</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Case Studies</value>
        </filters>
        <label>Case Studies</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Sheets</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Data Sheets</value>
        </filters>
        <label>Data Sheets</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Events</value>
        </filters>
        <label>Events</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hot_Selling_Tools</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Hot Selling Tools</value>
        </filters>
        <label>Hot Selling Tools</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Logos_and_Icons</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Logos and Icons</value>
        </filters>
        <label>Logos and Icons</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Tools</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>equals</operation>
            <value>Marketing Tools</value>
        </filters>
        <label>Marketing Tools</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Presentations</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Presentations</value>
        </filters>
        <label>Presentations</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Webinar_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Training Webinars</value>
        </filters>
        <label>Webinar Trainings</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Welcome_Info</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>Welcome Information</value>
        </filters>
        <label>Welcome Information</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>White_Papers</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Folder__c</field>
            <operation>includes</operation>
            <value>White Papers</value>
        </filters>
        <label>White Papers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>